--- a/api/.env.example
+++ b/api/.env.example
@@ -3,3 +3,9 @@ HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=4dufI5h8YVUuhVbp7L1-8hKo-u6jSvON
 DRIVE_DISK=local
+DB_CONNECTION=pg
+PG_HOST=127.0.0.1
+PG_PORT=5432
+PG_USER=lucid
+PG_PASSWORD=
+PG_DB_NAME=lucid
