--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "@types/proxy-addr": "^2.0.3",
     "@types/source-map-support": "^0.5.10",
     "adonis-preset-ts": "^2.1.0",
+    "adonis-sail": "^0.0.7",
     "eslint": "^8.53.0",
     "eslint-plugin-adonis": "^2.1.1",
     "pino-pretty": "^10.2.3",
@@ -33,7 +34,10 @@
   },
   "dependencies": {
     "@adonisjs/core": "^5.8.0",
+    "@adonisjs/lucid": "^18.4.2",
     "@adonisjs/repl": "^3.1.0",
+    "luxon": "^3.4.4",
+    "pg": "^8.11.3",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21"
