--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -7,4 +7,14 @@ RUN npm install --global pnpm@latest \
     && source /root/.bashrc \
     && pnpm config set store-dir /root/.local/share/pnpm/store
 
+WORKDIR /app
+
+COPY package.json pnpm-lock.yaml ./
+
+RUN pnpm install --frozen-lockfile
+
+COPY . .
+
 EXPOSE 3000
+
+CMD ["pnpm", "dev"]
