--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -11,10 +11,10 @@ WORKDIR /app
 
 COPY package.json pnpm-lock.yaml ./
 
-RUN pnpm install --frozen-lockfile
+RUN pnpm install
 
 COPY . .
 
-EXPOSE 3000
+EXPOSE 3333
 
 CMD ["pnpm", "dev"]
