fix(docker): node_modules installation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,19 @@ services:
       context: ./api
       dockerfile: Dockerfile
     restart: always
+    command: pnpm dev
+    working_dir: /app
     volumes:
       - ./api:/app
     ports:
       - 3333:3333
+
+#  nuxt:
+#    build:
+#      context: ./front
+#      dockerfile: Dockerfile
+#    restart: always
+#    volumes:
+#      - ./front:/app
+#    ports:
+#      - 3000:3000
