--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,8 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@unocss/nuxt": "^0.57.4",
+    "@vueuse/nuxt": "^10.6.1",
     "nuxt": "^3.8.1",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
