chore: nuxt build fix

--- a/front/package.json
+++ b/front/package.json
@@ -16,5 +16,8 @@
     "nuxt": "^3.8.1",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@unocss/reset": "^0.57.4"
   }
 }
