--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,26 +17,25 @@ services:
     ports:
       - "8080:8080"
 
-  api:
-    build:
-      context: ./api
-      dockerfile: Dockerfile
-    restart: always
-    command: pnpm dev
-    working_dir: /app
-    volumes:
-      - ./api:/app
-    ports:
-      - "3333:3333"
-
-  nuxt:
-    build:
-      context: ./front
-      dockerfile: Dockerfile
-    restart: always
-    command: pnpm dev
-    working_dir: /app
-    volumes:
-      - ./front:/app
-    ports:
-      - "3000:3000"
+#  api:
+#    build:
+#      context: ./api
+#      dockerfile: Dockerfile
+#    restart: always
+#    command: pnpm dev
+#    working_dir: /app/api
+#    volumes:
+#      - ./api:/app/api
+#    ports:
+#      - "3333:3333"
+#
+#  nuxt:
+#    build:
+#      context: ./front
+#      dockerfile: ./Dockerfile
+#    ports:
+#      - "3000:3000"
+#      - "24678:24678"
+#    volumes:
+#        - .:/src
+#        - node_modules:/src/node_modules
