--- a/front/package.json
+++ b/front/package.json
@@ -15,7 +15,8 @@
     "@vueuse/nuxt": "^10.6.1",
     "nuxt": "^3.8.1",
     "vue": "^3.3.8",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "tailwind-variants": "0.1.18"
   },
   "dependencies": {
     "@unocss/reset": "^0.57.4"
