--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-adonis": "^2.1.1",
     "pino-pretty": "^10.2.3",
     "typescript": "~4.6",
+    "uuid": "^9.0.1",
     "youch": "^3.3.3",
     "youch-terminal": "^2.2.3"
   },
