--- a/front/package.json
+++ b/front/package.json
@@ -13,10 +13,11 @@
     "@nuxt/devtools": "latest",
     "@unocss/nuxt": "^0.57.4",
     "@vueuse/nuxt": "^10.6.1",
+    "date-fns": "^2.30.0",
     "nuxt": "^3.8.1",
+    "tailwind-variants": "0.1.18",
     "vue": "^3.3.8",
-    "vue-router": "^4.2.5",
-    "tailwind-variants": "0.1.18"
+    "vue-router": "^4.2.5"
   },
   "dependencies": {
     "@unocss/reset": "^0.57.4"
