--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,8 @@
     "build": "node ace build --production",
     "start": "node server.js",
     "test": "node ace test",
-    "lint": "eslint . --ext=.ts"
+    "lint": "eslint . --ext=.ts",
+    "lint:fix": "eslint . --ext=.ts --fix"
   },
   "eslintConfig": {
     "extends": [
