--- a/api/package.json
+++ b/api/package.json
@@ -37,6 +37,7 @@
     "@adonisjs/core": "^5.8.0",
     "@adonisjs/lucid": "^18.4.2",
     "@adonisjs/repl": "^3.1.0",
+    "adonisjs-scheduler": "^0.0.25",
     "luxon": "^3.4.4",
     "pg": "^8.11.3",
     "proxy-addr": "^2.0.7",
