refactor: Refactor CryptoProvider to accept an object with provider details

--- a/api/ace-manifest.json
+++ b/api/ace-manifest.json
@@ -2,7 +2,7 @@
   "commands": {
     "synchronize": {
       "settings": {
-        "loadApp": false,
+        "loadApp": true,
         "stayAlive": false
       },
       "commandPath": "./commands/Synchronize",
