feat(rssfeed): adding the rss parser dependency and setting it up

--- a/api/ace-manifest.json
+++ b/api/ace-manifest.json
@@ -1,5 +1,17 @@
 {
   "commands": {
+    "rss:feed": {
+      "settings": {
+        "loadApp": false,
+        "stayAlive": false
+      },
+      "commandPath": "./commands/RssFeed",
+      "commandName": "rss:feed",
+      "description": "",
+      "args": [],
+      "aliases": [],
+      "flags": []
+    },
     "dump:rcfile": {
       "settings": {},
       "commandPath": "@adonisjs/core/build/commands/DumpRc",
