--- a/api/package.json
+++ b/api/package.json
@@ -41,6 +41,7 @@
     "pg": "^8.11.3",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
+    "rss-parser": "^3.13.0",
     "source-map-support": "^0.5.21"
   }
 }
