--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@adonisjs/core": "^5.8.0",
+    "@adonisjs/auth": "^8.2.3",
     "@adonisjs/lucid": "^18.4.2",
     "@adonisjs/repl": "^3.1.0",
     "luxon": "^3.4.4",
