--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -20,7 +20,7 @@ on:
       - 'api/**'
 
 jobs:
-  lint:
+  api:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -37,9 +37,10 @@ jobs:
       - run: pnpm install --frozen-lockfile
         working-directory: ./api
 
-      - run: pnpm lint
+      - name: Copy .env
+        run: cp .env.example .env
         working-directory: ./api
 
-      - run: pnpm test
+      - name: Run tests
+        run: pnpm test
         working-directory: ./api
-
