--- a/api/.env.example
+++ b/api/.env.example
@@ -6,6 +6,7 @@ DRIVE_DISK=local
 DB_CONNECTION=pg
 PG_HOST=127.0.0.1
 PG_PORT=5432
-PG_USER=lucid
-PG_PASSWORD=
-PG_DB_NAME=lucid
+PG_USER=postgres
+PG_PASSWORD=postgres
+PG_DB_NAME=crypto
+
