--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -29,7 +29,7 @@ jobs:
 
       - uses: actions/setup-node@v2
         with:
-          node-version: 16.x
+          node-version: 18.0
 
       - uses: KengoTODA/actions-setup-docker-compose@v1
         with:
