--- a/api/package.json
+++ b/api/package.json
@@ -38,10 +38,12 @@
     "@adonisjs/auth": "^8.2.3",
     "@adonisjs/lucid": "^18.4.2",
     "@adonisjs/repl": "^3.1.0",
+    "adonisjs-scheduler": "^0.0.25",
     "luxon": "^3.4.4",
     "pg": "^8.11.3",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "sqlite3": "^5.1.6"
   }
 }
