--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@unocss/reset": "^0.57.4"
+    "@unocss/reset": "^0.57.4",
+    "radix-vue": "^1.2.4"
   }
 }
