--- a/api/package.json
+++ b/api/package.json
@@ -34,8 +34,9 @@
     "youch-terminal": "^2.2.3"
   },
   "dependencies": {
-    "@adonisjs/core": "^5.8.0",
+    "@adonisjs/ally": "^4.1.5",
     "@adonisjs/auth": "^8.2.3",
+    "@adonisjs/core": "^5.8.0",
     "@adonisjs/lucid": "^18.4.2",
     "@adonisjs/repl": "^3.1.0",
     "adonisjs-scheduler": "^0.0.25",
