feat (test): add login test

--- a/api/.adonisrc.json
+++ b/api/.adonisrc.json
@@ -36,6 +36,13 @@
         "timeout": 60000
       },
       {
+        "name": "user_test",
+        "files": [
+          "tests/user_test/**/*.spec(.ts|.js)"
+        ],
+        "timeout": 60000
+      },
+      {
         "name": "Synchronization",
         "files": [
           "tests/synchronization/**/*.spec(.ts|.js)"
