--- a/api/.adonisrc.json
+++ b/api/.adonisrc.json
@@ -33,6 +33,13 @@
           "tests/functional/**/*.spec(.ts|.js)"
         ],
         "timeout": 60000
+      },
+      {
+        "name": "rss",
+        "files": [
+          "tests/rss/**/*.spec(.ts|.js)"
+        ],
+        "timeout": 60000
       }
     ]
   },
