feat: installation of rss feed (#33)
* feat(rssfeed): adding the rss parser dependency and setting it up

* feat: add rssFeedUpdater to command rssfeed

* feat: add article to bdd

* feat: add ArticleSourceSeeder and rss feed path

* fix: modification of article addition

* test: add test for feed updater

* fix: merge conflict

--- a/api/ace-manifest.json
+++ b/api/ace-manifest.json
@@ -1,5 +1,17 @@
 {
   "commands": {
+    "rss:feed": {
+      "settings": {
+        "loadApp": true,
+        "stayAlive": false
+      },
+      "commandPath": "./commands/RssFeed",
+      "commandName": "rss:feed",
+      "description": "Update RSS feed",
+      "args": [],
+      "aliases": [],
+      "flags": []
+    },
     "synchronize": {
       "settings": {
         "loadApp": true,
