--- a/api/.adonisrc.json
+++ b/api/.adonisrc.json
@@ -41,6 +41,13 @@
           "tests/synchronization/**/*.spec(.ts|.js)"
         ],
         "timeout": 60000
+      },
+      {
+        "name": "rss",
+        "files": [
+          "tests/rss/**/*.spec(.ts|.js)"
+        ],
+        "timeout": 60000
       }
     ]
   },
