feat: auth front & generic components (#32)
* feat(): add navbar

* fix(header,avatar.vue): fix navbar

* feat: button component

* chore(header.vue): color button correction and sizing correction

* feat(CardNews, index): add CardNews destructuring example

* chore(): test param card

* refactor(cardnews, tag): add tag component and correct call in cardnews

* refactor(header): use button component

* refactor(tag): correct struc component

* refactor(avatar,profileitem,profilenavigation): add profile's components

* refactor(cardnews,index): add date object on cardnews's props

* refactor(cardnews): add time lib on cardnews

* feat: Add use-auth.ts and use-fetch.ts files

* style: Remove unnecessary code and comments

* feat: front auth

* feat: navigation

* feat: navigation

* feat: header style

Co-authored-by: H4ppyCode <H4ppyCode@users.noreply.github.com>

* feat: Add HeadersController and update routes

* fix: button styles

* feat: add middleware on login page and social providers

* refactor(UsersController): add return type to logout and update methods

* style: fix typo in login page title

* feat: dropdown

* feat(models): Add key column to Role model

* feat: Add key field to RoleSeeder

* feat: Add dropdown menu items to Header component

* feat: Add Admin Header Bar component

* style: simplify admin header item styling

* feat: user controller management

* refactor: Remove debug console.log statements

* fix: register name in title

* fix: register method

---------

Co-authored-by: H4ppyCode ~ Pacôme <dhiser.pacome@gmail.com>
Co-authored-by: H4ppyCode <H4ppyCode@users.noreply.github.com>

--- a/front/package.json
+++ b/front/package.json
@@ -5,19 +5,30 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@formkit/i18n": "^1.4.0",
+    "@formkit/nuxt": "^1.4.0",
+    "@formkit/themes": "^1.4.0",
+    "@formkit/vue": "^1.4.0",
+    "@iconify/json": "^2.2.156",
     "@nuxt/devtools": "latest",
     "@unocss/nuxt": "^0.57.4",
     "@vueuse/nuxt": "^10.6.1",
+    "date-fns": "^2.30.0",
     "nuxt": "^3.8.1",
+    "pinia": "^2.1.7",
+    "tailwind-variants": "0.1.18",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@unocss/reset": "^0.57.4"
+    "@unocss/reset": "^0.57.4",
+    "radix-vue": "^1.2.4"
   }
 }
