feat(login): add auth providers

--- a/api/.env.example
+++ b/api/.env.example
@@ -11,3 +11,7 @@ PG_PASSWORD=postgres
 PG_DB_NAME=crypto
 GOOGLE_CLIENT_ID=clientId
 GOOGLE_CLIENT_SECRET=clientSecret
+TWITTER_CLIENT_ID=clientId
+TWITTER_CLIENT_SECRET=clientSecret
+FACEBOOK_CLIENT_ID=clientId
+FACEBOOK_CLIENT_SECRET=clientSecret
