feat: added missing keys to .env

--- a/api/.env.example
+++ b/api/.env.example
@@ -9,8 +9,11 @@ PG_PORT=5432
 PG_USER=postgres
 PG_PASSWORD=postgres
 PG_DB_NAME=crypto
-GOOGLE_CLIENT_ID=clientId
-GOOGLE_CLIENT_SECRET=clientSecret
-TWITTER_CLIENT_ID=clientId
-TWITTER_CLIENT_SECRET=clientSecret
+FRONT_URL=http://localhost:3000
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+TWITTER_CLIENT_ID=
+TWITTER_CLIENT_SECRET=
 
