--- a/api/.adonisrc.json
+++ b/api/.adonisrc.json
@@ -24,7 +24,7 @@
     "@adonisjs/core",
     "@adonisjs/lucid",
     "@adonisjs/auth",
-    "@adonisjs/bouncer"
+    "@adonisjs/bouncer",
     "@adonisjs/ally"
   ],
   "aceProviders": [
