--- a/api/package.json
+++ b/api/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@adonisjs/ally": "^4.1.5",
     "@adonisjs/auth": "^8.2.3",
+    "@adonisjs/bouncer": "^2.3.0",
     "@adonisjs/core": "^5.8.0",
     "@adonisjs/lucid": "^18.4.2",
     "@adonisjs/repl": "^3.1.0",
