--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -31,7 +31,7 @@
       "@japa/preset-adonis/build/adonis-typings",
       "@adonisjs/lucid",
       "@adonisjs/auth",
-      "@adonisjs/bouncer"
+      "@adonisjs/bouncer",
       "@adonisjs/ally"
     ]
   }
