feat(auth): implementation of oAuth2 providers (Google, Twitter) (#40)
* feat(oauth_google): add start oauth with google

* refactor: Import statements cleanup in CryptocurrencyData and CoinGeckoProvider

* add config for Ally

* feat(userauth_provider): add AuserAuth controller

* feat(routes): add routes for oauth

* feat(OauthGoogle): add Oauth Controllerwith google

* refactor(userautprovider)

* feat(login): add auth providers

* fix: generate manifest

* fix(login.vue): fix token detection with google oauth

* fix(login.vue): redirect to home page after login with oauth google

* fix(facebook)!: remove facebook drivers

* fix: pnpm lint:fix files

* feat: added missing keys to .env

* fix: missing coma in .adonisrc

* fix(deps:) added @adonisjs/bouncer

* fix(tests): removed key remember_me

* fix: import

* fix: tsconfig

---------

Co-authored-by: npldevfr <asnpldev@gmail.com>
Co-authored-by: Pacôme <pacome.dhiser@mobiapps.fr>

--- a/api/.env.example
+++ b/api/.env.example
@@ -9,4 +9,11 @@ PG_PORT=5432
 PG_USER=postgres
 PG_PASSWORD=postgres
 PG_DB_NAME=crypto
+FRONT_URL=http://localhost:3000
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+TWITTER_CLIENT_ID=
+TWITTER_CLIENT_SECRET=
 
