--- a/api/package.json
+++ b/api/package.json
@@ -34,6 +34,7 @@
     "youch-terminal": "^2.2.3"
   },
   "dependencies": {
+    "@adonisjs/ally": "^4.1.5",
     "@adonisjs/auth": "^8.2.3",
     "@adonisjs/bouncer": "^2.3.0",
     "@adonisjs/core": "^5.8.0",
