feat: linter on all projet

--- a/api/.env.example
+++ b/api/.env.example
@@ -11,6 +11,8 @@ PG_PASSWORD=postgres
 PG_DB_NAME=crypto
 FRONT_URL=http://localhost:3000
 
+CRYPTO_PROVIDER_COINMARKETCAP_API_KEY=
+
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
