--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Manage and track your crypto portfolio",
   "main": "index.js",
   "scripts": {
-    "release": "bumpp ./package.json",
+    "release": "bumpp ./package.json --recursive",
     "clean:node": "rimraf 'api/node_modules' 'front/node_modules' 'node_modules'",
     "start:all": "concurrently \"cd ./api && node ace serve --watch\" \"cd front && pnpm run dev\""
   },
@@ -14,6 +14,14 @@
     "rimraf": "^5.0.5"
   },
   "dependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "eslint": "^8.53.0",
+    "lint-staged": "^15.2.0"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,vue}": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
