--- a/api/package.json
+++ b/api/package.json
@@ -6,9 +6,7 @@
     "dev": "node ace serve --watch",
     "build": "node ace build --production",
     "start": "node server.js",
-    "test": "node ace test",
-    "lint": "eslint . --ext=.ts",
-    "lint:fix": "eslint . --ext=.ts --fix"
+    "test": "node ace test"
   },
   "eslintConfig": {
     "extends": [
@@ -25,8 +23,6 @@
     "@types/proxy-addr": "^2.0.3",
     "@types/source-map-support": "^0.5.10",
     "adonis-preset-ts": "^2.1.0",
-    "eslint": "^8.53.0",
-    "eslint-plugin-adonis": "^2.1.1",
     "pino-pretty": "^10.2.3",
     "typescript": "~4.6",
     "uuid": "^9.0.1",
