feat: updated rss

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -15,7 +15,10 @@
       ],
       "Database/*": [
         "./database/*"
-      ]
+      ],
+      "Rss/*": [
+        "./rss/*"
+      ],
     },
     "types": [
       "@adonisjs/core",
