--- a/api/.adonisrc.json
+++ b/api/.adonisrc.json
@@ -12,7 +12,8 @@
     "App": "app",
     "Config": "config",
     "Database": "database",
-    "Contracts": "contracts"
+    "Contracts": "contracts",
+    "rss": "rss"
   },
   "preloads": [
     "./start/routes",
