feat: add swagger config for article-source

--- a/api/ace-manifest.json
+++ b/api/ace-manifest.json
@@ -636,6 +636,17 @@
           "description": "Actions to implement"
         }
       ]
+    },
+    "swagger:generate": {
+      "settings": {
+        "loadApp": true
+      },
+      "commandPath": "adonis5-swagger/build/commands/GenerateSwaggerFile",
+      "commandName": "swagger:generate",
+      "description": "Generate swagger file",
+      "args": [],
+      "aliases": [],
+      "flags": []
     }
   },
   "aliases": {}
