--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "@adonisjs/core": "^5.8.0",
     "@adonisjs/lucid": "^18.4.2",
     "@adonisjs/repl": "^3.1.0",
+    "adonis5-swagger": "^1.4.1",
     "adonisjs-scheduler": "^0.0.25",
     "jsdom": "^23.0.1",
     "luxon": "^3.4.4",
