Auto stash before merge of "feat/policy-gates" and "origin/main"

--- a/api/.adonisrc.json
+++ b/api/.adonisrc.json
@@ -13,7 +13,7 @@
     "App": "app",
     "Config": "config",
     "Database": "database",
-    "Contracts": "contracts",
+    "Contracts": "contracts"
   },
   "preloads": [
     "./start/routes",
