--- a/front/package.json
+++ b/front/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@unocss/reset": "^0.57.4",
-    "radix-vue": "^1.2.4"
+    "radix-vue": "^1.2.4",
+    "vue3-apexcharts": "^1.4.4",
+    "apexcharts": "^3.45.1"
   },
   "devDependencies": {
     "@formkit/i18n": "^1.4.0",
