--- a/api/.adonisrc.json
+++ b/api/.adonisrc.json
@@ -27,7 +27,8 @@
     "@adonisjs/auth",
     "@adonisjs/bouncer",
     "@adonisjs/ally",
-    "adonis5-swagger"
+    "adonis5-swagger",
+    "adonis5-cache"
   ],
   "aceProviders": [
     "@adonisjs/repl"
