--- a/api/package.json
+++ b/api/package.json
@@ -15,8 +15,10 @@
     "@adonisjs/core": "^5.8.0",
     "@adonisjs/lucid": "^18.4.2",
     "@adonisjs/repl": "^3.1.0",
+    "adonis5-cache": "^1.3.1",
     "adonis5-swagger": "^1.4.1",
     "adonisjs-scheduler": "^0.0.25",
+    "date-fns": "^3.1.0",
     "jsdom": "^23.0.1",
     "luxon": "^3.4.4",
     "pg": "^8.11.3",
