feat: policies gates (#44)
* feat: security on users list

* feat: roles enum

* feat: rss fix

* Auto stash before merge of "feat/policy-gates" and "origin/main"

* fix: charts

* feat: add admin page for articleSource

* fix: auth

* fix: cookie

* fix: token

* fix: token

* fix: token

* feat: cryptocurrencies

* fix: policy

---------

Co-authored-by: BaptistePgn <baptiste.pgn@gmail.com>

--- a/api/.adonisrc.json
+++ b/api/.adonisrc.json
@@ -13,8 +13,7 @@
     "App": "app",
     "Config": "config",
     "Database": "database",
-    "Contracts": "contracts",
-    "rss": "rss"
+    "Contracts": "contracts"
   },
   "preloads": [
     "./start/routes",
@@ -28,7 +27,8 @@
     "@adonisjs/auth",
     "@adonisjs/bouncer",
     "@adonisjs/ally",
-    "adonis5-swagger"
+    "adonis5-swagger",
+    "adonis5-cache"
   ],
   "aceProviders": [
     "@adonisjs/repl"
