--- a/front/package.json
+++ b/front/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@unocss/reset": "^0.57.4",
-    "radix-vue": "^1.2.4"
+    "radix-vue": "^1.2.4",
+    "vue3-apexcharts": "^1.4.4",
+    "apexcharts": "^3.45.1"
   },
   "devDependencies": {
     "@formkit/i18n": "^1.4.0",
@@ -24,6 +26,7 @@
     "@nuxt/devtools": "latest",
     "@unocss/nuxt": "^0.57.4",
     "@vueuse/nuxt": "^10.6.1",
+    "@vueuse/core": "^7.3.0",
     "date-fns": "^2.30.0",
     "nuxt": "^3.8.1",
     "pinia": "^2.1.7",
